Re #27 POPUP #1 - fixed overlay popup with display cell & column count/gap/rull paragraph

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -36,6 +36,7 @@ $box-shadow-photo: 0 1.5rem 4rem rgba($color-black, 0.4);
 $box-shadow-photo-hover: 0 2.5rem 4rem rgba($color-black, 0.5);
 $box-shadow-story: 0 3rem 6rem rgba($color-black, 0.1);
 $box-shadow-circle: 0 1rem 3rem rgba($color-black, 0.1);
+$box-shadow-popup: 0 2rem 4rem rgba($color-black, 0.2);
 
 // BORDER RADIUS
 $border-radius-small: 0.3rem;
